# RLT_hackaton

./: README.md  pyproject.toml
config/: config.py
data/.ipynb_checkpoints/: data_analize-checkpoint.ipynb
src/bot/: main.py
src/bot/handler/: handler_commands.py  handler_messages.py
src/model/: fit.py  main.py
src/notebooks/: data_analize.ipynb  get_embbedings.ipynb  segmental.ipynb
