[tool.poetry]
name = "hackaton-rlt"
version = "0.1.0"
description = ""
authors = ["Victor Bratko <bratko.viktor2004@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
numpy = "^2.1.1"
aiogram = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
